--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<picture>
 					<source srcset="me.jpg" media="(max-width: 200px)">
 				</picture> -->
-				<img id="myimage" src="port-pic1.jpg">
+				<img id="myimage" src="port-pic (2).jpg">
 			</div>
 			
 			<div class="heading">
